Convert a couple RGBA values to similar-looking RGB colours so we don't have to deal with issues with transparency in Dark Mode

--- a/web-client/src/Styles/variables.scss
+++ b/web-client/src/Styles/variables.scss
@@ -9,8 +9,8 @@ $alto: #ddd;
 $gallery: #eee;
 
 // good habit box success
-$screamin-green: rgba(14, 238, 70, 0.59);
-$de-york: rgba(100, 182, 120, 1);
+$screamin-green: rgb(87, 251, 128);
+$de-york: rgb(100, 182, 120);
 $forest-green: rgb(16, 147, 0);
 $bilbao: rgb(35, 126, 27);
 
